--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
-DB_HOST=localhost
-DB_USER=labber
-DB_PASS=labber
-DB_NAME=midterm
-# Uncomment and set to true for Heroku
-# DB_SSL=true if heroku
-DB_PORT=5432
+DB_HOST=
+DB_USER=
+DB_PASS=
+DB_NAME=
+DB_PORT=
